# simple-app

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .sops.yaml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
assets/: app.css
config/: celery.py  urls.py
docs/: ACADEMIC_RULES_RUNBOOK.md  API.md  ARCHITECTURE.md  AUDIT_RUNBOOK.md  CI_GOVERNANCE.md  COMPOSE_CONTAINERS.md  CURRICULUM_RUNBOOK.md  DATABASE_RUNBOOK.md  DATASET_STAGE4_ACCEPTANCE.md  DATASET_V5.md  DATA_INTEGRITY_RUNBOOK.md  DEPLOYMENT_RUNBOOK.md  EVENTS_RUNBOOK.md  EVIDENCE_RUNBOOK.md  FEATURE_FLAG_RUNBOOK.md  IDENTITY_RUNBOOK.md  IMPLEMENTATION_STATUS.md  LOCAL_SETUP.md  OBSERVABILITY_RUNBOOK.md  OPERATIONS.md  PR01_PR03_ACCEPTANCE.md  PR04_ACCEPTANCE.md  PR05_PR07_ACCEPTANCE.md  PR08_PR10_ACCEPTANCE.md  PR11_PR14_ACCEPTANCE.md  PR15_PR18_ACCEPTANCE.md  PR19_PR24_ACCEPTANCE.md  PR25_PR29_ACCEPTANCE.md  PR30_PR33_ACCEPTANCE.md  PR34_PR39_ACCEPTANCE.md  QUALITY_LOOP_RUNBOOK.md  QUEUE_RUNBOOK.md  RPS_ASSESSMENT_RUNBOOK.md  SECRETS_RUNBOOK.md  SECURITY.md  SECURITY_RUNBOOK.md  TRACEABILITY.md  security-controls.json
fixtures/: README.md  sample-data-2020-2026-obe-spec-v5.compact.json
obe/: __init__.py  deployment.py
rebuild/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
scripts/: __init__.py  check.sh  check_critical_coverage.py  check_migration_reversibility.py  copy-echarts.mjs  entrypoint.sh  materialize_sops_secrets.sh  obe_ops.py  quickstart.sh  rotate_secret.py  setup-local.sh  smoke_test.py
templates/: base.html  dashboard.html  tasks.html
tests/: test_architecture.py  test_domain.py  test_pr04_configuration.py  test_pr05_pr07.py  test_pr08_pr10.py  test_pr11_pr14.py  test_pr15_pr18.py  (+12 more)
(+220 files in other folders)
